--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,5 +1,5 @@
 importFrom("vegsoup", decode, taxonomy, stackSpecies, sites, coordinates, stackSites, SpeciesTaxonomy, Vegsoup, decostand, "decostand<-", layers, coerce)
 importFrom("methods", "as")
 importFrom("stats", median)
-importFrom("utils", head, tail)
+importFrom("utils", head, tail, read.csv)
 exportPattern("^[[:alpha:]]+")
